force-app/main/default/objects/Card_Product__c/fields/Implementation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Stage__c</fullName>
    <label>Process Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Contact Date</fullName>
            </value>
            <value>
                <fullName>Submit to Credit for Review</fullName>
            </value>
            <value>
                <fullName>Submit to Credit for Limit Increase Review</fullName>
            </value>
            <value>
                <fullName>Received by Credit</fullName>
            </value>
            <value>
                <fullName>Status Green - On Track for Approval Submission</fullName>
            </value>
            <value>
                <fullName>Status Yellow - Credit Needs More Info</fullName>
            </value>
            <value>
                <fullName>Additional Credit Info Provided</fullName>
            </value>
            <value>
                <fullName>Credit Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Application Complete</fullName>
            </value>
            <value>
                <fullName>Approved by Credit</fullName>
            </value>
            <value>
                <fullName>Implementation Needs Additional Info</fullName>
            </value>
            <value>
                <fullName>Implementation Info Provided</fullName>
            </value>
            <value>
                <fullName>Status Red - Credit Approval Unlikely</fullName>
            </value>
            <value>
                <fullName>Declined by Credit</fullName>
            </value>
            <value>
                <fullName>Declined for Incompleteness</fullName>
            </value>
            <value>
                <fullName>Limit Increase Approved</fullName>
            </value>
            <value>
                <fullName>Submit to Credit for Re-Review</fullName>
            </value>
            <value>
                <fullName>Legal Request Submitted</fullName>
            </value>
            <value>
                <fullName>Routed for Signatures</fullName>
            </value>
            <value>
                <fullName>Agreement sent to Company</fullName>
            </value>
            <value>
                <fullName>Executed Agreement Received</fullName>
            </value>
            <value>
                <fullName>Completed Setup in FI</fullName>
            </value>
            <value>
                <fullName>Ready for QA</fullName>
            </value>
            <value>
                <fullName>QA Failed</fullName>
            </value>
            <value>
                <fullName>QA Verification Complete</fullName>
            </value>
            <value>
                <fullName>Cards Mailed</fullName>
            </value>
            <value>
                <fullName>CCOR / Data Feed Complete</fullName>
            </value>
            <value>
                <fullName>First Usage</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>**Credit Analyst Assigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>