force-app/main/default/objects/Card_Product__c/fields/Is_Agent_Bank__c.field-meta.xml
<CustomField>
    <fullName>Is_Agent_Bank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Agent Bank?</label>
    <type>Checkbox</type>
</CustomField>