force-app/main/default/objects/Card_Product__c/fields/Legal_Company_Name_s__c.field-meta.xml
<CustomField>
    <fullName>Legal_Company_Name_s__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>(*) Legal Company Name(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>