force-app/main/default/objects/Card_Product__c/fields/Legal_Request_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Request_Submitted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Request Submitted Date</label>
    <type>DateTime</type>
</CustomField>