force-app/main/default/objects/Card_Product__c/fields/Legal_Structure__c.field-meta.xml
<CustomField>
    <fullName>Legal_Structure__c</fullName>
    <label>(*) Legal Structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C Corp</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Limited Liability Corp (LLC)</fullName>
            </value>
            <value>
                <fullName>Limited Liability Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Liability Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>S-Corp</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Still Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>