force-app/main/default/objects/Card_Product__c/fields/Liability_Type__c.field-meta.xml
<CustomField>
    <fullName>Liability_Type__c</fullName>
    <label>(*) Liability Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Guarantee</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Joint &amp; Several</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Personal Guarantee</fullName>
            </value>
            <value>
                <fullName>Secured</fullName>
            </value>
            <value>
                <fullName>Still Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>