force-app/main/default/objects/Card_Product__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Mailing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>