force-app/main/default/objects/Card_Product__c/fields/Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Mailing State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>