force-app/main/default/objects/Card_Product__c/fields/Mailing_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Mailing Street Address</label>
    <type>TextArea</type>
</CustomField>