force-app/main/default/objects/Card_Product__c/fields/Mailing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Mailing Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>