force-app/main/default/objects/Card_Product__c/fields/Master_Logo__c.field-meta.xml
<CustomField>
    <fullName>Master_Logo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Master Logo</label>
    <type>TextArea</type>
</CustomField>