force-app/main/default/objects/Card_Product__c/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NAICS Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>