force-app/main/default/objects/Card_Product__c/fields/Number_of_Cards_at_Set_Up__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cards_at_Set_Up__c</fullName>
    <label>Number of Cards at Set Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>