force-app/main/default/objects/Card_Product__c/fields/of_Days_for_Signatures__c.field-meta.xml
<CustomField>
    <fullName>of_Days_for_Signatures__c</fullName>
    <formula>CASE(MOD(DATEVALUE(Legal_Request_Submitted_Date__c) - DATE(1985,6,24),7), 
  0 , CASE( MOD( Today() - DATEVALUE(Legal_Request_Submitted_Date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Today() - DATEVALUE(Legal_Request_Submitted_Date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Today() - DATEVALUE(Legal_Request_Submitted_Date__c)
,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Today() - DATEVALUE(Legal_Request_Submitted_Date__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Today() - DATEVALUE(Legal_Request_Submitted_Date__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Today() - DATEVALUE(Legal_Request_Submitted_Date__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Today() - DATEVALUE(Legal_Request_Submitted_Date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Today() - DATEVALUE(Legal_Request_Submitted_Date__c ))/7)*5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Days Since Legal Request Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>