force-app/main/default/objects/Card_Product__c/fields/of_Days_since_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>of_Days_since_Last_Modified__c</fullName>
    <formula>Today()  -   DATEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Days since Last Modified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>