force-app/main/default/objects/Card_Product__c/fields/Online_Form__c.field-meta.xml
<CustomField>
    <fullName>Online_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Form</label>
    <type>Checkbox</type>
</CustomField>