force-app/main/default/objects/Card_Product__c/fields/Online_Tools__c.field-meta.xml
<CustomField>
    <fullName>Online_Tools__c</fullName>
    <label>(*) Online Tools</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Card_Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Expanded</fullName>
            </value>
            <value>
                <fullName>Deluxe_ERM</fullName>
                <label>Deluxe ERM</label>
            </value>
            <value>
                <fullName>Deluxe</fullName>
            </value>
            <value>
                <fullName>IBWS Only</fullName>
            </value>
            <value>
                <fullName>VOX</fullName>
                <label>VOX CCA + IBWS</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Still Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>