force-app/main/default/objects/Card_Product__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please relate an Opportunity to this Card Product record so that the &quot;Annual Spend&quot; and &quot;Estimated Number of Cards&quot; fields populate from the related Opportunity.</inlineHelpText>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Card Products</relationshipLabel>
    <relationshipName>Card_Products</relationshipName>
    <type>Lookup</type>
</CustomField>