force-app/main/default/objects/Card_Product__c/fields/Other_AP_Software__c.field-meta.xml
<CustomField>
    <fullName>Other_AP_Software__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other AP Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>