force-app/main/default/objects/Card_Product__c/fields/Ownership_Structure__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Structure__c</fullName>
    <label>Ownership Structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C-Corp</fullName>
            </value>
            <value>
                <fullName>Close Held</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>ESOP</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>LLLP</fullName>
            </value>
            <value>
                <fullName>LLP</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Privately Owned</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Public - Govt</fullName>
            </value>
            <value>
                <fullName>S-Corp</fullName>
            </value>
            <value>
                <fullName>Shareholders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>