force-app/main/default/objects/Card_Product__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Is_Agent_Bank__c</field>
            <operation>equals</operation>
            <valueField>Partner__c.Agent_Bank__c</valueField>
        </filterItems>
        <filterItems>
            <field>Partner__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Card Products</relationshipLabel>
    <relationshipName>Card_Products</relationshipName>
    <type>Lookup</type>
</CustomField>