force-app/main/default/objects/Card_Product__c/fields/Partnering_Bank_ID_3__c.field-meta.xml
<CustomField>
    <fullName>Partnering_Bank_ID_3__c</fullName>
    <label>Partnering Bank ID 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Is_Agent_Bank__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>155000</fullName>
            </value>
            <value>
                <fullName>167201</fullName>
            </value>
            <value>
                <fullName>167202</fullName>
            </value>
            <value>
                <fullName>167207</fullName>
            </value>
            <value>
                <fullName>167213</fullName>
            </value>
            <value>
                <fullName>167220</fullName>
            </value>
            <value>
                <fullName>183-000</fullName>
            </value>
            <value>
                <fullName>189000</fullName>
            </value>
            <value>
                <fullName>19000</fullName>
                <isActive>false</isActive>
                <label>19000</label>
            </value>
            <value>
                <fullName>192000</fullName>
            </value>
            <value>
                <fullName>196000</fullName>
            </value>
            <value>
                <fullName>199000</fullName>
            </value>
            <value>
                <fullName>214000</fullName>
            </value>
            <value>
                <fullName>215000</fullName>
            </value>
            <value>
                <fullName>239000</fullName>
            </value>
            <value>
                <fullName>251000</fullName>
            </value>
            <value>
                <fullName>253201</fullName>
            </value>
            <value>
                <fullName>253207</fullName>
            </value>
            <value>
                <fullName>253213</fullName>
            </value>
            <value>
                <fullName>253220</fullName>
            </value>
            <value>
                <fullName>253248</fullName>
            </value>
            <value>
                <fullName>27000</fullName>
            </value>
            <value>
                <fullName>29000</fullName>
                <isActive>false</isActive>
                <label>29000</label>
            </value>
            <value>
                <fullName>296000</fullName>
            </value>
            <value>
                <fullName>303000</fullName>
            </value>
            <value>
                <fullName>31000</fullName>
            </value>
            <value>
                <fullName>336000</fullName>
            </value>
            <value>
                <fullName>371000</fullName>
            </value>
            <value>
                <fullName>386000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>