force-app/main/default/objects/Card_Product__c/fields/Partnering_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Partnering_Bank_Name__c</fullName>
    <label>(*) Partnering Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Is_Agent_Bank__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>114th Commercial Lending</fullName>
            </value>
            <value>
                <fullName>1st Bank</fullName>
            </value>
            <value>
                <fullName>AAHOA</fullName>
            </value>
            <value>
                <fullName>Ag Lending</fullName>
            </value>
            <value>
                <fullName>Allegiance Bank</fullName>
            </value>
            <value>
                <fullName>Amerant Bank</fullName>
            </value>
            <value>
                <fullName>American National Bank</fullName>
            </value>
            <value>
                <fullName>American Savings Bank FSB</fullName>
            </value>
            <value>
                <fullName>Amtrust Bank</fullName>
            </value>
            <value>
                <fullName>Arbor Bank</fullName>
            </value>
            <value>
                <fullName>Astoria Federal Savings Bank</fullName>
            </value>
            <value>
                <fullName>Bank of the Ozarks</fullName>
            </value>
            <value>
                <fullName>Bank of the San Juans</fullName>
            </value>
            <value>
                <fullName>Barrington Bank &amp; Trust</fullName>
            </value>
            <value>
                <fullName>Beneficial Bank</fullName>
            </value>
            <value>
                <fullName>Beverly Bank &amp; Trust</fullName>
            </value>
            <value>
                <fullName>Big Sky Western Bank</fullName>
            </value>
            <value>
                <fullName>Cadence Bank</fullName>
            </value>
            <value>
                <fullName>California Bank of Commerce</fullName>
            </value>
            <value>
                <fullName>California Community Bank</fullName>
            </value>
            <value>
                <fullName>Canandaigua National Bank</fullName>
            </value>
            <value>
                <fullName>Capital City Bank</fullName>
            </value>
            <value>
                <fullName>Cathay Bank</fullName>
            </value>
            <value>
                <fullName>CerescoBank</fullName>
            </value>
            <value>
                <fullName>CertusBank</fullName>
            </value>
            <value>
                <fullName>Chain Bridge Bank</fullName>
            </value>
            <value>
                <fullName>Chemcial Bank</fullName>
            </value>
            <value>
                <fullName>Cherokee State Bank</fullName>
            </value>
            <value>
                <fullName>Citizen&#39;s Bank and Trust</fullName>
            </value>
            <value>
                <fullName>Citizens Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>