force-app/main/default/objects/Card_Product__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Path</label>
    <length>100</length>
    <type>Text</type>
</CustomField>