force-app/main/default/objects/Card_Product__c/fields/Payables__c.field-meta.xml
<CustomField>
    <fullName>Payables__c</fullName>
    <label>Payables+</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>