force-app/main/default/objects/Card_Product__c/fields/Payer_Direct_Hub__c.field-meta.xml
<CustomField>
    <fullName>Payer_Direct_Hub__c</fullName>
    <label>Payer Direct Hub</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIP</fullName>
            </value>
            <value>
                <fullName>BIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>