force-app/main/default/objects/Card_Product__c/fields/Payments_Due_In__c.field-meta.xml
<CustomField>
    <fullName>Payments_Due_In__c</fullName>
    <label>Payments Due In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>25 Days</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>