force-app/main/default/objects/Card_Product__c/fields/PDH_Bora__c.field-meta.xml
<CustomField>
    <fullName>PDH_Bora__c</fullName>
    <label>PDH/Bora</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>