force-app/main/default/objects/Card_Product__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>(*) Phone</label>
    <type>Phone</type>
</CustomField>