force-app/main/default/objects/Card_Product__c/fields/Physical_City__c.field-meta.xml
<CustomField>
    <fullName>Physical_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>(*) Company Physical City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>