force-app/main/default/objects/Card_Product__c/fields/Physical_State__c.field-meta.xml
<CustomField>
    <fullName>Physical_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>(*) Company Physical State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>