force-app/main/default/objects/Card_Product__c/fields/Physical_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Physical_Street_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>(*) Company Physical Street Address</label>
    <type>TextArea</type>
</CustomField>