force-app/main/default/objects/Card_Product__c/fields/Physical_Zip__c.field-meta.xml
<CustomField>
    <fullName>Physical_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>(*) Company Physical Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>