force-app/main/default/objects/Card_Product__c/fields/Process_Stage_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Process_Stage_Change_Date__c</fullName>
    <description>The current day is added to this field whenever a process stage change takes place via a workflow rule. This is used to facilitate reporting.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Process Stage Change Date</label>
    <type>Date</type>
</CustomField>