force-app/main/default/objects/Card_Product__c/fields/Product_Implementation_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Product_Implementation_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Implementation Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Card_Products3</relationshipName>
    <type>Lookup</type>
</CustomField>