force-app/main/default/objects/Card_Product__c/fields/Program_Admin__c.field-meta.xml
<CustomField>
    <fullName>Program_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Admin</label>
    <type>Checkbox</type>
</CustomField>