force-app/main/default/objects/Card_Product__c/fields/Prospect_Notified__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Notified__c</fullName>
    <description>Date the prospect is notified by the Agent Bank of Adverse action.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Prospect Notified</label>
    <type>Date</type>
</CustomField>