force-app/main/default/objects/Card_Product__c/fields/Ready_for_QA_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_QA_Complete_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ready for QA Complete Date</label>
    <type>DateTime</type>
</CustomField>