force-app/main/default/objects/Card_Product__c/fields/Received_Completed_Imp_Packet_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Completed_Imp_Packet_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Received Completed Imp Packet Date</label>
    <type>DateTime</type>
</CustomField>